--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -45,7 +45,8 @@
                      Grid.Row="1"
                      Padding="10"
                      MinHeight="400"
-                     MinWidth="400"/>
+                     MinWidth="400"
+                     Text="{Binding TextArea, UpdateSourceTrigger=PropertyChanged}"/>
             <Grid Grid.Row="2">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="auto"/>
@@ -54,19 +55,18 @@
                 </Grid.ColumnDefinitions>
                 <Button x:Name="OpenFromFileButton" 
                         Grid.Column="0"
-                    Content="Open from file..." 
-                    Width="100"
-                    HorizontalAlignment="Left"
-                    Margin="10"/>
-                <Button Grid.Column="2"
+                        Content="Open from file..." 
+                        Width="100"
+                        HorizontalAlignment="Left"
+                        Margin="10"
+                        Command="{Binding OpenFromFileCommand}"/>
+                <Button x:Name="GetTestButton"
+                        Grid.Column="2"
                         Content="Get Test" 
                         Width="60"
-                    Margin="10"/>
+                        Margin="10"
+                        Command="{Binding GetTestCommand}"/>
             </Grid>
-            <StackPanel Orientation="Horizontal"
-                        Grid.Row="2">
-
-            </StackPanel>
         </Grid>
         <Grid Grid.Column="1">
             <Grid.Resources>
@@ -128,20 +128,23 @@
             </Button>
             <StackPanel Grid.Row = "1">
                 <Label Content="Title"/>
-                <TextBox Height="60"/>
+                <TextBox Text="{Binding Title}"
+                         Height="60"/>
                 <Label Content="Author"/>
                 <TextBox Text="{Binding Author}"/>
                 <Label Content="Source"/>
-                <TextBox/>
+                <TextBox Text="{Binding Source}"/>
                 <Label Content="Publish Date"/>
-                <DatePicker Margin="0 0 10 0"/>
+                <DatePicker SelectedDate="{Binding PublishDate}" 
+                            Margin="0 0 10 0"/>
                 <Label Content="Summary"/>
-                <TextBox/>
+                <TextBox Text="{Binding Summary}"/>
             </StackPanel>
             <Button Grid.Row="2"
-                        Content="Create Test" 
+                    Content="Create Test" 
                     HorizontalAlignment="Right"
-                    Margin="10"/>
+                    Margin="10"
+                    Command="{Binding CreateCommand}"/>
         </Grid>
     </Grid>
 </UserControl>
