--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -86,6 +86,7 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
+            
             <Button x:Name="CreateTestClose" 
                     Grid.Row="0"
                     HorizontalAlignment="Right"
@@ -126,7 +127,9 @@
                                     Foreground="Gray" 
                                     FontSize="19"/>
             </Button>
-            <StackPanel Grid.Row = "1">
+                
+            <StackPanel Grid.Row = "1" 
+                        CanVerticallyScroll="True">
                 <Label Content="Title"/>
                 <TextBox Text="{Binding Title}"
                          Height="60"/>
@@ -136,9 +139,76 @@
                 <TextBox Text="{Binding Source}"/>
                 <Label Content="Publish Date"/>
                 <DatePicker SelectedDate="{Binding PublishDate}" 
-                            Margin="0 0 10 0"/>
+                            Margin="0 0 10 0"
+                            Padding="10"/>
                 <Label Content="Summary"/>
-                <TextBox Text="{Binding Summary}"/>
+                    <TextBox Text="{Binding Summary}"/>
+                <Label Content="Image"/>
+                <Border Height="144"
+                        BorderThickness="1"
+                        BorderBrush="Gray"
+                        Margin="0 0 10 0">
+                    <Grid>
+                        <Image Source="{Binding Image, UpdateSourceTrigger=PropertyChanged}"
+                       Stretch="UniformToFill"/>
+
+                        <Button Width="auto"
+                                Height="auto"
+                                OpacityMask="#222"
+                                BorderThickness="0">
+
+                            <Button.Style>
+                                <Style TargetType="{x:Type Button}">
+                                    <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type Button}">
+                                            <Border x:Name="Border" 
+                                                Background="{TemplateBinding Background}">
+                                                <ContentPresenter HorizontalAlignment="Center" 
+                                                              VerticalAlignment="Center" />
+                                            </Border>
+                                            
+                                                <ControlTemplate.Triggers>
+                                                    <Trigger Property="IsMouseOver" 
+                                                     Value="True">
+                                                        <Setter Property="Background" 
+                                                        Value="#bbfdfdfd" 
+                                                        TargetName="Border" />
+                                                </Trigger>
+                                                <Trigger Property="IsPressed" 
+                                                     Value="True">
+                                                    <Setter Property="Background" 
+                                                        Value="#a8aaaaaa" 
+                                                        TargetName="Border" />
+                                                </Trigger>
+                                                    
+                                                </ControlTemplate.Triggers>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                                    <Setter Property="Content" Value="" />
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding IsMouseOver}" 
+Value="True">
+                                            <Setter Property="Content" Value="{Binding UploadImagePrompt, UpdateSourceTrigger=PropertyChanged}" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                        </Button.Style>
+
+                            <Button.Background>
+                                <LinearGradientBrush StartPoint="2,0" 
+                                             EndPoint="2,6">
+                                    <GradientStop Color="Transparent" 
+                                          Offset="0.0"/>
+                                    <GradientStop Color="#fdfdfd" 
+                                          Offset="1"/>
+                                </LinearGradientBrush>
+                            </Button.Background>
+
+                        </Button>
+                    </Grid>
+                </Border>
             </StackPanel>
             <Button Grid.Row="2"
                     Content="Create Test" 
