CreateCommand file output implemented

--- a/Codebase/Typerr/View/CreateTestView.xaml
+++ b/Codebase/Typerr/View/CreateTestView.xaml
@@ -152,7 +152,8 @@
                         <Image Source="{Binding Image, UpdateSourceTrigger=PropertyChanged}"
                        Stretch="UniformToFill"/>
 
-                        <Button Width="auto"
+                        <Button Name="ImageButton" 
+                                Width="auto"
                                 Height="auto"
                                 OpacityMask="#222"
                                 BorderThickness="0">
@@ -174,7 +175,7 @@
                                                         <Setter Property="Background" 
                                                         Value="#bbfdfdfd" 
                                                         TargetName="Border" />
-                                                </Trigger>
+                                                    </Trigger>
                                                 <Trigger Property="IsPressed" 
                                                      Value="True">
                                                     <Setter Property="Background" 
@@ -186,13 +187,7 @@
                                         </ControlTemplate>
                                     </Setter.Value>
                                 </Setter>
-                                    <Setter Property="Content" Value="" />
-                                    <Style.Triggers>
-                                        <DataTrigger Binding="{Binding IsMouseOver}" 
-Value="True">
-                                            <Setter Property="Content" Value="{Binding UploadImagePrompt, UpdateSourceTrigger=PropertyChanged}" />
-                                        </DataTrigger>
-                                    </Style.Triggers>
+                                    
                                 </Style>
                         </Button.Style>
 
