--- a/Codebase/Typerr/View/HomeView.xaml
+++ b/Codebase/Typerr/View/HomeView.xaml
@@ -3,25 +3,96 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Typerr.View" xmlns:components="clr-namespace:Typerr.Components"
+             xmlns:local="clr-namespace:Typerr.View" 
+             xmlns:components="clr-namespace:Typerr.Components" 
+             xmlns:viewmodel="clr-namespace:Typerr.ViewModel" xmlns:fa="clr-namespace:Meziantou.WpfFontAwesome;assembly=Meziantou.WpfFontAwesome"
+             d:DataContext="{d:DesignInstance Type=viewmodel:HomeViewModel}"
              mc:Ignorable="d" 
              Background="White">
-    <StackPanel>
-        <!--#region Library -->
-        <TextBlock Text="Library"
+    
+
+        <StackPanel>
+            <!--#region Library -->
+            <TextBlock Text="Library"
                    Foreground="Black"
                    FontWeight="Bold"
                    FontSize="24"
+                   Grid.Column="0"
                    HorizontalAlignment="Left"
                    Margin="30,20,0,20"/>
-        <StackPanel x:Name="HomeLibraryContent" 
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="46"/>
+            </Grid.ColumnDefinitions>
+            <ScrollViewer VerticalScrollBarVisibility="Disabled"
+                          HorizontalScrollBarVisibility="Auto"
+                          PreviewMouseWheel="ScrollViewer_PreviewMouseWheel">
+            <StackPanel x:Name="HomeLibraryContent" 
                     Orientation="Horizontal" 
+                    Grid.Column="0"
                     Margin="20,0,0,20"
                     >
-            <components:CreateTestTile x:Name="CreateTestButton"/>
-        </StackPanel>
+                <components:CreateTestTile Grid.Column="0" x:Name="CreateTestButton"/>
+                <ItemsControl ItemsSource="{Binding LibTileViewModels}">
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <components:LibTile/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                </ItemsControl>
+            </StackPanel>
+            </ScrollViewer>
+            <Button x:Name="GoToLibraryButton" 
+                    Grid.Column="1"
+                Background="White"
+                    HorizontalAlignment="Right"
+                    BorderThickness="0" 
+                    Width="46" 
+                   
+                    Command="{Binding GoToLibraryCommand}"
+                    >
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border x:Name="wButton" 
+                                                Background="{TemplateBinding Background}">
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" 
+                                                     Value="True">
+                                            <Setter Property="Background" 
+                                                        Value="#eee" 
+                                                        TargetName="wButton" />
+                                        </Trigger>
+                                        <Trigger Property="IsPressed" 
+                                                     Value="True">
+                                            <Setter Property="Background"
+                                                        Value="#ddd" 
+                                                        TargetName="wButton" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+                <fa:FontAwesomeIcon SolidIcon="ArrowCircleRight" 
+                                    Foreground="{StaticResource AppTheme}" 
+                                    FontSize="19"/>
+
+            </Button>
+        </Grid>
         <!--#endregion-->
-        <!--Feed
+            <!--Feed
         <TextBlock Text="Feed"
                    Foreground="Black"
                    FontWeight="Bold"
@@ -37,5 +108,8 @@
             <components:FeedTile/>
         </StackPanel>
         -->
-    </StackPanel>
+        
+        
+        </StackPanel>
+    
 </UserControl>
