--- a/Codebase/Typerr/View/TestPreviewView.xaml
+++ b/Codebase/Typerr/View/TestPreviewView.xaml
@@ -10,70 +10,70 @@
              mc:Ignorable="d">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
             <RowDefinition/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
-        <Grid Background="White"
-              Grid.Row="1">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="180"/>
-                <RowDefinition Height="auto"/>
-                <RowDefinition Height="60"/>
-            </Grid.RowDefinitions>
-            <Grid.Resources>
-                <Style TargetType="Button">
-                    <Setter Property="Padding" 
+    <Grid Background="White" Grid.Row="1">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="180"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="60"/>
+        </Grid.RowDefinitions>
+        <Grid.Resources>
+            <Style TargetType="Button">
+                <Setter Property="Padding" 
                         Value="5"/>
-                </Style>
-                <Style TargetType="Label">
-                    <Setter Property="Margin" 
+            </Style>
+            <Style TargetType="Label">
+                <Setter Property="Margin" 
                             Value="10 10 10 0"/>
-                </Style>
-                <Style TargetType="TextBox">
-                    <Setter Property="Margin" 
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="Margin" 
                             Value="10 10 10 0"/>
-                </Style>
+            </Style>
 
-            </Grid.Resources>
+        </Grid.Resources>
 
-            <Grid Grid.Row="0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="300"/>
-                    <ColumnDefinition/>
-                    <ColumnDefinition Width="46"/>
-                </Grid.ColumnDefinitions>
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="300"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="46"/>
+            </Grid.ColumnDefinitions>
 
-                <Border Height="180"
+            <Border Height="180"
                     Width="300"
                     Grid.Row="0"
                     Grid.Column="0"
                    HorizontalAlignment="Left">
-                    <Image Source="{Binding Image}"/>
-                </Border>
-                <StackPanel Grid.Column="1" VerticalAlignment="Bottom">
-                    <Border Grid.Row="0"
+                <Image Source="{Binding Image}"/>
+            </Border>
+            <StackPanel Grid.Column="1" VerticalAlignment="Bottom">
+                <Border Grid.Row="0"
                                 VerticalAlignment="Bottom">
-                        <TextBlock Padding="10 5"
+                    <TextBlock Padding="10 5"
                                Foreground="Black"
                                FontSize="24"
                                FontWeight="Bold"
                                 TextWrapping="Wrap"
                                 Text="{Binding Title}"/>
-                    </Border>
-                    <Border Grid.Row="1"
+                </Border>
+                <Border Grid.Row="1"
                                 VerticalAlignment="Bottom">
-                        <TextBlock Padding="10 0"
+                    <TextBlock Padding="10 0"
                                Foreground="Black"
                                FontSize="16"
                                 TextWrapping="Wrap"
                                 Text="{Binding FooterInfo}"/>
-                    </Border>
-                </StackPanel>
+                </Border>
+            </StackPanel>
 
 
 
-                <Button Grid.Row="0"
+            <Button Grid.Row="0"
                     Grid.Column="2"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
@@ -82,53 +82,59 @@
                     Height="46"
                     Background="Transparent"
                     Command="{Binding TestPreviewCloseCommand}">
-                    <Button.Style>
-                        <Style TargetType="{x:Type Button}">
-                            <Setter Property="Template">
-                                <Setter.Value>
-                                    <ControlTemplate TargetType="{x:Type Button}">
-                                        <Border x:Name="wButton" 
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="{x:Type Button}">
+                                    <Border x:Name="wButton" 
                                                 Background="{TemplateBinding Background}">
-                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                        </Border>
-                                        <ControlTemplate.Triggers>
-                                            <Trigger Property="IsMouseOver" 
+                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" 
                                                      Value="True">
-                                                <Setter Property="Background" 
+                                            <Setter Property="Background" 
                                                         Value="#eee" 
                                                         TargetName="wButton" />
-                                            </Trigger>
-                                            <Trigger Property="IsPressed" 
+                                        </Trigger>
+                                        <Trigger Property="IsPressed" 
                                                      Value="True">
-                                                <Setter Property="Background"
+                                            <Setter Property="Background"
                                                         Value="#ddd" 
                                                         TargetName="wButton" />
-                                            </Trigger>
-                                        </ControlTemplate.Triggers>
-                                    </ControlTemplate>
-                                </Setter.Value>
-                            </Setter>
-                        </Style>
-                    </Button.Style>
-                    <fa:FontAwesomeIcon SolidIcon="Times" 
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </Button.Style>
+                <fa:FontAwesomeIcon SolidIcon="Times" 
                                     Foreground="Gray" 
                                     FontSize="19"/>
-                </Button>
-            </Grid>
-            <Grid Grid.Row="1">
-                <TextBlock Padding="10 20 10 10"
+            </Button>
+        </Grid>
+
+        <TextBlock Grid.Row="1" Padding="10 0"
+                               Foreground="Black"
+                               FontSize="24"
+                               FontWeight="Bold"
+                                Text="Summary"/>
+
+        <Grid Grid.Row="2">
+            <TextBlock Padding="10 20 10 10"
                                Foreground="Black"
                                FontSize="16"
                                 TextWrapping="Wrap"
                        
                                 Text="{Binding Summary}"/>
-            </Grid>
-            <Grid Grid.Row="2">
-                <Button>
-                    Start Test
-                </Button>
-            </Grid>
+        </Grid>
+        <Grid Grid.Row="3">
+            <Button>
+                Start Test
+            </Button>
         </Grid>
     </Grid>
-    
+    </Grid>
 </UserControl>
