--- a/Codebase/Typerr/View/TestPreviewView.xaml
+++ b/Codebase/Typerr/View/TestPreviewView.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Typerr.View" 
              xmlns:fa="clr-namespace:Meziantou.WpfFontAwesome;assembly=Meziantou.WpfFontAwesome" 
-             xmlns:viewmodel="clr-namespace:Typerr.ViewModel" 
+             xmlns:viewmodel="clr-namespace:Typerr.ViewModel" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              d:DataContext="{d:DesignInstance Type=viewmodel:TestPreviewViewModel}"
              mc:Ignorable="d">
     <Grid>
@@ -14,66 +14,66 @@
             <RowDefinition Height="auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-    <Grid Background="White" Grid.Row="1">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="180"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="60"/>
-        </Grid.RowDefinitions>
-        <Grid.Resources>
-            <Style TargetType="Button">
-                <Setter Property="Padding" 
+        <Grid Background="White" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="180"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="60"/>
+            </Grid.RowDefinitions>
+            <Grid.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="Padding" 
                         Value="5"/>
-            </Style>
-            <Style TargetType="Label">
-                <Setter Property="Margin" 
+                </Style>
+                <Style TargetType="Label">
+                    <Setter Property="Margin" 
                             Value="10 10 10 0"/>
-            </Style>
-            <Style TargetType="TextBox">
-                <Setter Property="Margin" 
+                </Style>
+                <Style TargetType="TextBox">
+                    <Setter Property="Margin" 
                             Value="10 10 10 0"/>
-            </Style>
+                </Style>
 
-        </Grid.Resources>
+            </Grid.Resources>
 
-        <Grid Grid.Row="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="300"/>
-                <ColumnDefinition/>
-                <ColumnDefinition Width="46"/>
-            </Grid.ColumnDefinitions>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="300"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="46"/>
+                </Grid.ColumnDefinitions>
 
-            <Border Height="180"
+                <Border Height="180"
                     Width="300"
                     Grid.Row="0"
                     Grid.Column="0"
                    HorizontalAlignment="Left">
-                <Image Source="{Binding Image}"/>
-            </Border>
-            <StackPanel Grid.Column="1" VerticalAlignment="Bottom">
-                <Border Grid.Row="0"
+                    <Image Source="{Binding Image}"/>
+                </Border>
+                <StackPanel Grid.Column="1" 
+                        VerticalAlignment="Bottom">
+                    <Border Grid.Row="0"
                                 VerticalAlignment="Bottom">
-                    <TextBlock Padding="10 5"
+                        <TextBlock Padding="10 5"
                                Foreground="Black"
                                FontSize="24"
                                FontWeight="Bold"
                                 TextWrapping="Wrap"
                                 Text="{Binding Title}"/>
-                </Border>
-                <Border Grid.Row="1"
+                    </Border>
+                    <Border Grid.Row="1"
                                 VerticalAlignment="Bottom">
-                    <TextBlock Padding="10 0"
+                        <TextBlock Padding="10 0"
                                Foreground="Black"
                                FontSize="16"
-                                TextWrapping="Wrap"
                                 Text="{Binding FooterInfo}"/>
-                </Border>
-            </StackPanel>
+                    </Border>
+                </StackPanel>
 
 
 
-            <Button Grid.Row="0"
+                <Button Grid.Row="0"
                     Grid.Column="2"
                     HorizontalAlignment="Right"
                     VerticalAlignment="Top"
@@ -82,59 +82,169 @@
                     Height="46"
                     Background="Transparent"
                     Command="{Binding TestPreviewCloseCommand}">
-                <Button.Style>
-                    <Style TargetType="{x:Type Button}">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="{x:Type Button}">
-                                    <Border x:Name="wButton" 
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="{x:Type Button}">
+                                        <Border x:Name="wButton" 
                                                 Background="{TemplateBinding Background}">
-                                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
-                                    </Border>
-                                    <ControlTemplate.Triggers>
-                                        <Trigger Property="IsMouseOver" 
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsMouseOver" 
                                                      Value="True">
-                                            <Setter Property="Background" 
+                                                <Setter Property="Background" 
                                                         Value="#eee" 
                                                         TargetName="wButton" />
-                                        </Trigger>
-                                        <Trigger Property="IsPressed" 
+                                            </Trigger>
+                                            <Trigger Property="IsPressed" 
                                                      Value="True">
-                                            <Setter Property="Background"
+                                                <Setter Property="Background"
                                                         Value="#ddd" 
                                                         TargetName="wButton" />
-                                        </Trigger>
-                                    </ControlTemplate.Triggers>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </Button.Style>
-                <fa:FontAwesomeIcon SolidIcon="Times" 
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                    <fa:FontAwesomeIcon SolidIcon="Times" 
                                     Foreground="Gray" 
                                     FontSize="19"/>
-            </Button>
-        </Grid>
+                </Button>
+            </Grid>
 
-        <TextBlock Grid.Row="1" Padding="10 0"
-                               Foreground="Black"
-                               FontSize="24"
-                               FontWeight="Bold"
-                                Text="Summary"/>
+            <TextBlock Grid.Row="1" 
+                   Padding="35 10 0 0"
+                   Foreground="Black"
+                   FontSize="24"
+                   FontWeight="Bold"
+                   Text="Summary"/>
 
-        <Grid Grid.Row="2">
-            <TextBlock Padding="10 20 10 10"
+            <Grid Grid.Row="2">
+                <TextBlock Padding="25 10"
                                Foreground="Black"
                                FontSize="16"
                                 TextWrapping="Wrap"
                        
                                 Text="{Binding Summary}"/>
+            </Grid>
+            <Grid Grid.Row="3">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto"/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0"
+                           Padding="35 15 0 0"
+                           FontSize="16">
+                <Hyperlink NavigateUri="" 
+                           Foreground="#F43">
+                    Delete test</Hyperlink>
+                </TextBlock>
+                <StackPanel Orientation="Horizontal"
+                        HorizontalAlignment="Right"
+                        Grid.Column="1">
+                    <xctk:IntegerUpDown Value="{Binding NumericUpDownValue}"
+                                        Width="{Binding NumericUpDownWidth}"
+                                        Visibility="{Binding NumericUpDownVisibility}"
+                                        FontSize="16"
+                                        Padding="5"
+                             Margin="10"/>
+
+
+                    <Button Background="Transparent" 
+                            BorderBrush="Transparent"
+                            Width="46"
+                            Height="46"
+                            Command="{Binding ModeSwitchLeftCommand}">
+                        <Button.Style>
+                            <Style TargetType="{x:Type Button}">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type Button}">
+                                            <Border x:Name="wButton" 
+                                                Background="{TemplateBinding Background}">
+                                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                            </Border>
+                                            <ControlTemplate.Triggers>
+                                                <Trigger Property="IsMouseOver" 
+                                                     Value="True">
+                                                    <Setter Property="Background" 
+                                                        Value="#eee" 
+                                                        TargetName="wButton" />
+                                                </Trigger>
+                                                <Trigger Property="IsPressed" 
+                                                     Value="True">
+                                                    <Setter Property="Background"
+                                                        Value="#ddd" 
+                                                        TargetName="wButton" />
+                                                </Trigger>
+                                            </ControlTemplate.Triggers>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </Button.Style>
+                        <iconPacks:PackIconEntypo Kind="TriangleLeft" 
+                                                  Width="25"
+                                                  Height="25"
+                                                  Foreground="{StaticResource AppTheme}"/>
+                    </Button>
+                    <Label Content="{Binding ModeText}" 
+                           FontWeight="Bold"
+                           FontFamily="Calibri"
+                           FontSize="24"
+                           Foreground="{StaticResource AppTheme}"/>
+                    <Button Background="Transparent" 
+                            BorderBrush="Transparent"
+                            Width="46"
+                            Height="46"
+                            Command="{Binding ModeSwitchRightCommand}">
+                        <Button.Style>
+                            <Style TargetType="{x:Type Button}">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="{x:Type Button}">
+                                            <Border x:Name="wButton" 
+                                                Background="{TemplateBinding Background}">
+                                                <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                                            </Border>
+                                            <ControlTemplate.Triggers>
+                                                <Trigger Property="IsMouseOver" 
+                                                     Value="True">
+                                                    <Setter Property="Background" 
+                                                        Value="#eee" 
+                                                        TargetName="wButton" />
+                                                </Trigger>
+                                                <Trigger Property="IsPressed" 
+                                                     Value="True">
+                                                    <Setter Property="Background"
+                                                        Value="#ddd" 
+                                                        TargetName="wButton" />
+                                                </Trigger>
+                                            </ControlTemplate.Triggers>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </Button.Style>
+                        <iconPacks:PackIconEntypo Kind="TriangleRight" 
+                                                  Width="25"
+                                                  Height="25"
+                                    Foreground="{StaticResource AppTheme}"/>
+                    </Button>
+                    <ItemsControl ItemsSource="{Binding TestPreviewControls}">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <UniformGrid Rows="1" Margin="10"/>
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
+                    </ItemsControl>
+                </StackPanel>
+
+            </Grid>
         </Grid>
-        <Grid Grid.Row="3">
-            <Button>
-                Start Test
-            </Button>
-        </Grid>
-    </Grid>
     </Grid>
 </UserControl>
